[package]
name = "observer"
version = "0.2.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events_logging", "function_logging"]
repository = "https://github.com/ackotech/observer"

[features]
default = []
postgres = ["diesel/postgres"]

[dependencies]
colored = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
failure = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1"
observer_attribute = { path = "../observer_attribute"  }
diesel = { version = "1", features = ["r2d2", "chrono"] }
r2d2-diesel = "1"
antidote = "1"
r2d2 = "0.8"
log = "0.4"
log4rs = "0.11"
sqlparser = "0.5"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
