[package]
name = "observer_attribute"
version = "0.1.6"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Observer Attributes"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["observer", "logging", "events"]
repository = "https://github.com/ackotech/observer"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
darling = "0.9"

[dependencies.syn]
version = "0.15"
features = ["full"]
